--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "ali-oss",
-  "version": "6.9.0",
+  "name": "ali-oss-weiyi",
+  "version": "6.10.2",
   "description": "aliyun oss(object storage service) node client",
   "main": "lib/node/index.js",
   "files": [
     "lib",
+    "es",
     "shims",
     "dist"
   ],
   "browser": {
-    "lib/client.js": "./dist/aliyun-oss-sdk.js",
+    "lib/node/index.js": "./dist/aliyun-oss-sdk.js",
     "mime": "mime/lite",
     "urllib": "./shims/xhr.js",
     "utility": "./shims/utility.js",
@@ -35,7 +36,7 @@
     "lint-staged": "lint-staged",
     "detect-secrets": "node task/detect-secrets",
     "tsc": "npm run tsc:clean && tsc:build",
-    "tsc:build": "tsc -b tsconfig-es.json tsconfig-cjs.json",
+    "tsc:build": "tsc -b tsconfig-es.json tsconfig-cjs.json && node task/handle-es-export.js",
     "tsc:watch": "tsc -b tsconfig-es.json tsconfig-cjs.json --watch",
     "tsc:clean": "tsc -b tsconfig-es.json tsconfig-cjs.json --clean "
   },
